# onco-derm-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _quarto.yml  docker-compose.yaml  objects.json  pyproject.toml  requirements.txt  session_store.db  todo.md
.viz/: stats.json
_site/: index.html  rough.html  search.json  todo.html
_site/docs/: index.html
_site/notebooks/: DermaMnist.html  KedroBootTutorial.html  RestNet.html
_site/reference/: DermaMNISTDataset.html  calibrate_predictor.html  conformal_prediction.html  data_prep.html  evaluate_model.html  evaluate_predictor.html  index.html  integrated_gradients.html  log_model.html  log_prediction.html  model_finetune.html  model_select.html  multi_mahalanobis_detector.html  normalize_image.html  normalizing_images.html  ood_detection.html  predict.html  prepare_data.html  (+6 more)
conf/: logging.yml
docs/: index.qmd
medical-dashboard/: Dockerfile  package-lock.json  package.json
notebooks/: DermaMnist.ipynb  KedroBootTutorial.ipynb  RestNet.ipynb
reference/: DermaMNISTDataset.qmd  calibrate_predictor.qmd  conformal_prediction.qmd  data_prep.qmd  evaluate_model.qmd  evaluate_predictor.qmd  index.qmd  integrated_gradients.qmd  log_model.qmd  log_prediction.qmd  model_finetune.qmd  model_select.qmd  multi_mahalanobis_detector.qmd  normalize_image.qmd  normalizing_images.qmd  ood_detection.qmd  predict.qmd  prepare_data.qmd  prepare_data_for_ood.qmd  preprocess_data_input.qmd  resize_image.qmd  rmd_detector.qmd  tensoring_resizing.qmd  train_wide_resnet.qmd
tests/: test_run.py
(+283 files in other folders)
