[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "onco_derm_ai"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
onco-derm-ai = "onco_derm_ai.__main__:main"

[tool.kedro]
package_name = "onco_derm_ai"
project_name = "onco-derm-ai"
kedro_init_version = "0.19.8"
tools = [ "Linting", "Testing", "Custom Logging", "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
lint.select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
lint.ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/onco_derm_ai -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "onco_derm_ai.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[project.optional-dependencies]
dev = ["ruff",
    "pytest-cov",
    "pytest-mock",
    "pytest",
    ]

[tool.kedro_telemetry]
project_id = "7ecba36bc2e142b995445bace16e3b7f"
